Fix | Adding auth
