# app/Http/Requests/AuthRegisterRequest.php
@@ -1,0 +1,17 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class AuthRegisterRequest extends FormRequest
+{
+    public function rules(): array
+    {
+        return [
+            'name' => ['required'],
+            'email' => ['required', 'email', 'max:254'],
+            'password' => ['required'],
+        ];
+    }
+}
